combine lua and SFML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ProgSpace)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(${PROJECT_NAME} graphics.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
 add_definitions("-std=c++17")
 #Set C++17
@@ -16,8 +16,15 @@ if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE 
         /W4 /WX)
 else()
+    #target_compile_options(${PROJECT_NAME} PRIVATE 
+    #    -Wall -Wextra -pedantic -Werror)
     target_compile_options(${PROJECT_NAME} PRIVATE 
-        -Wall -Wextra -pedantic -Werror)
+        -Wall)
 endif()
 
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/scripts/ $<TARGET_FILE_DIR:${PROJECT_NAME}>
+)
