--- a/extras/package.json
+++ b/extras/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "particle-api-js": "^9.4.1"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "particle-api-js": "^9.4.1",
+    "request": "^2.88.2"
   }
 }
